--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	</head>
 	<body>
 		<div class="header">
-				<h2>demo列表<a href="http://github.com/heqianyu">（点击进入我的github主页）（部分为baidu的在线jQuery文件，放心加载）</a></h2>
+				<h2>demo列表<a href="http://github.com/heqianyu">（点击进入我的github主页）（个别为baidu的在线jQuery文件，放心加载）</a></h2>
 			<div class="fixedWidth">
 				<div id="topblank"></div>
 			</div>
@@ -46,26 +46,34 @@
 		<div class="main">
 			<div class="fixedWidth">
 				<div>
-					<h1 class="title" data-id = "a">仿站</h1>
+					<h1 class="title" data-id = "a">静态页面</h1>
 					<ul class="menu none" id="a">
 						<li><a href="https://heqianyu.github.io/demo/iqiyi.html">爱奇艺主页</a></li>
 						<li><a href="https://heqianyu.github.io/demo/caseImoocMall.html">慕课网商城主页面</a></li>
-						<li><a href="https://heqianyu.github.io/demo/caseImoocSubMenu.html">慕课网商城二级板块</a></li>
 					</ul>
 				</div>
 				<div>
 					<h1 class="title" data-id = "b">组件</h1>
 					<ul class="menu none" id="b">
-						<li><a href="https://heqianyu.github.io/demo/caseValidate.html">简单正则验证示例</a></li>
+						<li><a href="https://heqianyu.github.io/demo/s8advertisement.html">带进度条滚动（炸弹广告）</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseTabOfJquery.html">带悬停效果</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseKidsTab.html">带页码滚动</a></li>
 						<li><a href="https://heqianyu.github.io/demo/caseTabOfJquery.html">广告部件</a></li>
 						<li><a href="https://heqianyu.github.io/demo/caseMoreVideo.html">视频预览部件</a></li>
 						<li><a href="https://heqianyu.github.io/demo/caseHandPaintingTab.html">水平滚动</a></li>
-						<li><a href="https://heqianyu.github.io/demo/caseKidsTab.html">带页码滚动</a></li>
-						<li><a href="https://heqianyu.github.io/demo/s8advertisement.html">带进度条滚动（炸弹广告）</a></li>
-						<li><a href="https://heqianyu.github.io/demo/caseTabOfJquery.html">带悬停效果</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseValidate.html">简单正则验证示例</a></li>
 						<li><a href="https://heqianyu.github.io/demo/s8AD.html">炸弹广告</a></li>
 					</ul>
 				</div>
+				<div>
+					<h1 class="title" data-id = "e">canvas画板</h1>
+					<ul class="menu none" id="e">
+						<li><a href="https://heqianyu.github.io/demo/caseBallsClock.html">2018倒计时</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseClock.html">点阵时钟</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseClock2.html">拟物时钟</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseTimeOut.html">点阵倒计时</a></li>
+					</ul>
+				</div>	
 				<div>
 					<h1 class="title" data-id = "c">网站类型</h1>
 					<ul class="menu none" id="c">
@@ -78,27 +86,18 @@
 						<li><a href="https://heqianyu.github.io/demo/caseImoocSpring.html">慕课贺春</a></li>
 					</ul>
 				</div>	
-				<div>
-					<h1 class="title" data-id = "e">canvas画板</h1>
-					<ul class="menu none" id="e">
-						<li><a href="https://heqianyu.github.io/demo/caseBallsClock.html">2018倒计时</a></li>
-						<li><a href="https://heqianyu.github.io/demo/caseClock.html">点阵时钟</a></li>
-						<li><a href="https://heqianyu.github.io/demo/caseClock2.html">拟物时钟</a></li>
-						<li><a href="https://heqianyu.github.io/demo/caseTimeOut.html">点阵倒计时</a></li>
-					</ul>
-				</div>	
-				<div>
-					<h1 class="title" data-id = "f">我的简历</h1>
+				<!-- <div>
+					<h1 class="title" data-id = "f"></h1>
 					<ul class="menu	none" id="f">
-						<li><a>学历：本科</a></li>
-						<li><a>毕业院校：武汉生物工程学院</a></li>
-						<li><a>15-17就业单位：如意情集团</a></li>
-						<li><a>爱好：运动、摄影</a></li>
-						<li><a>薪资期望：能让我留在深圳就好</a></li>
-						<li><a>有美感，有创意，有信念</a></li>
-						<li><a>请给我一个面试的机会，不胜感激！</a></li>
+						<li><a></a></li>
+						<li><a></a></li>
+						<li><a></a></li>
+						<li><a></a></li>
+						<li><a></a></li>
+						<li><a></a></li>
+						<li><a></a></li>
 					</ul>
-				</div>
+				</div> -->
 				<div style="height: 30px;cursor: pointer;"></div>
 			</div>	
 		</div>
