--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 					<h1 class="title" data-id = "a">静态页面</h1>
 					<ul class="menu none" id="a">
 						<li><a href="https://heqianyu.github.io/demo/iqiyi.html">爱奇艺主页</a></li>
-						<li><a href="https://heqianyu.github.io/demo/caseImoocMall.html">慕课网商城主页面</a></li>
 					</ul>
 				</div>
 				<div>
 					<h1 class="title" data-id = "b">组件</h1>
 					<ul class="menu none" id="b">
+						<li><a href="https://heqianyu.github.io/demo/caseShoppingMall.html">延迟菜单</a></li>
 						<li><a href="https://heqianyu.github.io/demo/s8advertisement.html">带进度条滚动（炸弹广告）</a></li>
 						<li><a href="https://heqianyu.github.io/demo/caseTabOfJquery.html">带悬停效果</a></li>
 						<li><a href="https://heqianyu.github.io/demo/caseKidsTab.html">带页码滚动</a></li>
