--- a/caseValidate.html
+++ b/caseValidate.html
@@ -70,7 +70,7 @@
 			<br />
 			&nbsp;&nbsp;&nbsp;&nbsp;密&nbsp;&nbsp;&nbsp;&nbsp;码：<input type="password" name="password" id="password"/><span id="pswMsg"></span>
 			<br />
-			预留邮箱：<input type="text" name="emailadress" id="emailadress"/><span id="emailMsg"></span>
+			&nbsp;&nbsp;&nbsp;&nbsp;邮&nbsp;&nbsp;&nbsp;&nbsp;箱：<input type="text" name="emailadress" id="emailadress" placeholder="请输入xxx@xx.com" /><span id="emailMsg"></span>
 			<input type="button" id="submit" value="提交" />
 		</div>
 	</body>
