--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	</head>
 	<body>
 		<div class="header">
-				<h2>demo列表<a href="http://github.com/heqianyu">（点击进入我的github主页）（个别为baidu的在线jQuery文件，放心加载）</a></h2>
+				<h2>demo列表<a href="http://github.com/heqianyu" target="_blank">（点击进入我的github主页）（个别为baidu的在线jQuery文件，放心加载）</a></h2>
 			<div class="fixedWidth">
 				<div id="topblank"></div>
 			</div>
@@ -48,42 +48,41 @@
 				<div>
 					<h1 class="title" data-id = "a">静态页面</h1>
 					<ul class="menu none" id="a">
-						<li><a href="https://heqianyu.github.io/demo/iqiyi.html">爱奇艺主页</a></li>
+						<li><a href="https://heqianyu.github.io/demo/iqiyi.html" target="_blank">爱奇艺主页</a></li>
 					</ul>
 				</div>
 				<div>
 					<h1 class="title" data-id = "b">组件</h1>
 					<ul class="menu none" id="b">
-						<li><a href="https://heqianyu.github.io/demo/caseShoppingMall.html">延迟菜单</a></li>
-						<li><a href="https://heqianyu.github.io/demo/s8advertisement.html">带进度条滚动（炸弹广告）</a></li>
-						<li><a href="https://heqianyu.github.io/demo/caseTabOfJquery.html">带悬停效果</a></li>
-						<li><a href="https://heqianyu.github.io/demo/caseKidsTab.html">带页码滚动</a></li>
-						<li><a href="https://heqianyu.github.io/demo/caseTabOfJquery.html">广告部件</a></li>
-						<li><a href="https://heqianyu.github.io/demo/caseMoreVideo.html">视频预览部件</a></li>
-						<li><a href="https://heqianyu.github.io/demo/caseHandPaintingTab.html">水平滚动</a></li>
-						<li><a href="https://heqianyu.github.io/demo/caseValidate.html">简单正则验证示例</a></li>
-						<li><a href="https://heqianyu.github.io/demo/s8AD.html">炸弹广告</a></li>
+						<li><a href="https://heqianyu.github.io/demo/s8AD.html" target="_blank">炸弹广告（s8）</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseShoppingMall.html" target="_blank">延迟菜单</a></li>
+						<li><a href="https://heqianyu.github.io/demo/s8advertisement.html" target="_blank">秀气版</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseKidsTab.html" target="_blank">带页码滚动</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseTabOfJquery.html" target="_blank">广告部件</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseMoreVideo.html" target="_blank">视频预览部件</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseHandPaintingTab.html" target="_blank">水平滚动</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseValidate.html" target="_blank">登录验证</a></li>
 					</ul>
 				</div>
 				<div>
 					<h1 class="title" data-id = "e">canvas画板</h1>
 					<ul class="menu none" id="e">
-						<li><a href="https://heqianyu.github.io/demo/caseBallsClock.html">2018倒计时</a></li>
-						<li><a href="https://heqianyu.github.io/demo/caseClock.html">点阵时钟</a></li>
-						<li><a href="https://heqianyu.github.io/demo/caseClock2.html">拟物时钟</a></li>
-						<li><a href="https://heqianyu.github.io/demo/caseTimeOut.html">点阵倒计时</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseBallsClock.html" target="_blank">2018倒计时</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseClock.html" target="_blank">点阵时钟</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseClock2.html" target="_blank">拟物时钟</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseTimeOut.html" target="_blank">点阵倒计时</a></li>
 					</ul>
 				</div>	
 				<div>
 					<h1 class="title" data-id = "c">网站类型</h1>
 					<ul class="menu none" id="c">
-						<li><a href="https://heqianyu.github.io/demo/caseWaterfall.html">瀑布流</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseWaterfall.html" target="_blank">瀑布流</a></li>
 					</ul>
 				</div>
 				<div>
 					<h1 class="title" data-id = "d">移动端示例</h1>
 					<ul class="menu none" id="d">
-						<li><a href="https://heqianyu.github.io/demo/caseImoocSpring.html">慕课贺春</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseImoocSpring.html" target="_blank">仿慕课贺春</a></li>
 					</ul>
 				</div>	
 				<!-- <div>
