--- a/me.html
+++ b/me.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>heqianyu's_demo</title>
+		<title>heqianyu</title>
 		<style type="text/css">
 			*{padding: 0;margin: 0;}
 			li{list-style: none;}
