--- a/demo.html
+++ b/demo.html
@@ -54,12 +54,12 @@
 				<div>
 					<h1 class="title" data-id = "b">组件</h1>
 					<ul class="menu none" id="b">
-						<li><a href="https://heqianyu.github.io/about/s8AD.html" target="_blank">炸弹广告（s8）</a></li>
+						<li><a href="https://heqianyu.github.io/about/s8advertisement.html" target="_blank">纤细版炸弹（s8）</a></li>
 						<li><a href="https://heqianyu.github.io/about/caseShoppingMall.html" target="_blank">延迟菜单</a></li>
-						<li><a href="https://heqianyu.github.io/about/s8advertisement.html" target="_blank">秀气版</a></li>
-						<li><a href="https://heqianyu.github.io/about/caseKidsTab.html" target="_blank">带页码滚动</a></li>
-						<li><a href="https://heqianyu.github.io/about/caseTabOfJquery.html" target="_blank">广告部件</a></li>
-						<li><a href="https://heqianyu.github.io/about/caseMoreVideo.html" target="_blank">视频预览部件</a></li>
+						<li><a href="https://heqianyu.github.io/about/caseKidsTab.html" target="_blank">圆点页码</a></li>
+						<li><a href="https://heqianyu.github.io/about/s8AD.html" target="_blank">粗犷进度条炸弹</a></li>
+						<li><a href="https://heqianyu.github.io/about/caseTabOfJquery.html" target="_blank">轮播广告</a></li>
+						<li><a href="https://heqianyu.github.io/about/caseMoreVideo.html" target="_blank">视频推荐</a></li>
 						<li><a href="https://heqianyu.github.io/about/caseHandPaintingTab.html" target="_blank">水平滚动</a></li>
 						<li><a href="https://heqianyu.github.io/about/caseValidate.html" target="_blank">登录验证</a></li>
 					</ul>
