--- a/s8AD.html
+++ b/s8AD.html
@@ -23,8 +23,7 @@
 			.pro4 .process{background: #069;}
 			.process{width:0px;height: 20px;position:relative;bottom: 0px;position: absolute;}
 		</style>
-		<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
-		<script src="s8ad/s8AD.js" type="text/javascript" charset="utf-8"></script>
+		
 	</head>
 	<body>
 		<div class="go" data-config='{
@@ -53,6 +52,8 @@
 				</div>
 			</div>
 		</div>
+		<script src="jquery-3.2.1.min.js"></script>
+		<script src="s8ad/s8AD.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			$(function(){
 				var tab1=new Tab($(".go"));
