--- a/create_order/index.html
+++ b/create_order/index.html
@@ -56,6 +56,8 @@
 		var scale = 1 / devicePixelRatio;
 		document.querySelector('meta[name="viewport"]').setAttribute('content','initial-scale=' + scale + ', maximum-scale=' + scale + ', minimum-scale=' + scale + ', user-scalable=no');
 		document.documentElement.style.fontSize = document.documentElement.clientWidth / 10 + 'px';
+		document.body.addEventListener('touchstart', function () {  
+        });
 	</script>
 </body>
 </html>
