--- a/create_order/index.html
+++ b/create_order/index.html
@@ -14,16 +14,16 @@
 		</div>
 		<div class="guest_info">
 			<div class="name">
-				<p>客户姓名<span>林叶</span></p>
+				<p>客户姓名<input type="text" name="name" value="林叶"></p>
 			</div>
 			<div class="tel">
-				<p>客户电话<span>13255452123</span></p>
+				<p>客户电话<input type="text" name="tel" value="13255452123"></p>
 			</div>
 			<div class="ad">
 				<p>地址<span class="fr">广东省深圳市南山区<i class="right"></i></span></p>
 			</div>
 			<div id="ad_detail">
-				<p>高新南环路29号留学生创业大厦2201</p>
+				<input type="text" name="tel" value="高新南环路29号留学生创业大厦2201">
 			</div>
 		</div>
 		<div class="service">
