--- a/demo.html
+++ b/demo.html
@@ -46,18 +46,24 @@
 		<div class="main">
 			<div class="fixedWidth">
 				<div>
-					<h1 class="title" data-id = "a">静态页面</h1>
+					<h1 class="title" data-id = "a">pc端页面</h1>
 					<ul class="menu none" id="a">
 						<li><a href="https://heqianyu.github.io/about/iqiyi.html" target="_blank">爱奇艺主页</a></li>
 					</ul>
 				</div>
 				<div>
-					<h1 class="title" data-id = "b">组件</h1>
+					<h1 class="title" data-id = "d">移动端示例</h1>
+					<ul class="menu none" id="d">
+						<li><a href="https://heqianyu.github.io/about/create_order/index.html" target="_blank">某电商平台</a></li>
+					</ul>
+				</div>	
+				<div>
+					<h1 class="title" data-id = "b">菜单、轮播</h1>
 					<ul class="menu none" id="b">
-						<li><a href="https://heqianyu.github.io/about/s8advertisement.html" target="_blank">纤细版炸弹（s8）</a></li>
+						<li><a href="https://heqianyu.github.io/about/s8advertisement.html" target="_blank">纤细版s8</a></li>
 						<li><a href="https://heqianyu.github.io/about/caseShoppingMall.html" target="_blank">延迟菜单</a></li>
 						<li><a href="https://heqianyu.github.io/about/caseKidsTab.html" target="_blank">圆点页码</a></li>
-						<li><a href="https://heqianyu.github.io/about/s8AD.html" target="_blank">粗犷进度条炸弹</a></li>
+						<li><a href="https://heqianyu.github.io/about/s8AD.html" target="_blank">粗犷进度条</a></li>
 						<li><a href="https://heqianyu.github.io/about/caseTabOfJquery.html" target="_blank">轮播广告</a></li>
 						<li><a href="https://heqianyu.github.io/about/caseMoreVideo.html" target="_blank">视频推荐</a></li>
 						<li><a href="https://heqianyu.github.io/about/caseHandPaintingTab.html" target="_blank">水平滚动</a></li>
@@ -79,12 +85,6 @@
 						<li><a href="https://heqianyu.github.io/about/caseWaterfall.html" target="_blank">瀑布流</a></li>
 					</ul>
 				</div>
-				<div>
-					<h1 class="title" data-id = "d">移动端示例</h1>
-					<ul class="menu none" id="d">
-						<li><a href="https://heqianyu.github.io/about/caseImoocSpring.html" target="_blank">仿慕课贺春</a></li>
-					</ul>
-				</div>	
 				<!-- <div>
 					<h1 class="title" data-id = "f"></h1>
 					<ul class="menu	none" id="f">
